--- a/.github/workflows/Cl.yaml
+++ b/.github/workflows/Cl.yaml
@@ -29,7 +29,7 @@ jobs:
       - name: Run tests with coverage
         env:
           SECRET_KEY: ${{secrets.SECRET_KEY}}
-          DEBUG: $([secrets.DEBUG;)
+          DEBUG: ${{secrets.DEBUG}}
 
         run: |
           python manage.py test
