--- a/.github/workflows/Cl.yaml
+++ b/.github/workflows/Cl.yaml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set up python 3.11
-      - uses: actions/setup-python@v2
+        uses: actions/setup-python@v2
         with:
           python-version: "3.11"
       - name: Install dependencies
