--- a/.github/workflows/Cl.yaml
+++ b/.github/workflows/Cl.yaml
@@ -33,3 +33,10 @@ jobs:
 
         run: |
           python manage.py test
+
+      - name: Email jo'natish
+        env:
+          SECRET_KEY: ${{secrets.SECRET_KEY}}
+          DEBUG: ${{secrets.DEBUG}}
+          run:
+            python manage.py ci_mail
