--- a/.github/workflows/Cl.yaml
+++ b/.github/workflows/Cl.yaml
@@ -40,3 +40,37 @@ jobs:
           DEBUG: ${{secrets.DEBUG}}
           run:
             python manage.py ci_mail
+
+  deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Add SSH key
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+        shell: bash
+
+      - name: Add server to known hosts
+        run: |
+          ssh-keyscan -H 143.198.183.137 >> ~/.ssh/known_hosts
+        shell: bash
+
+      - name: Deploy to Server
+        run: |
+          ssh root@143.198.183.137 "cd ../home/kutubxona_api1 && git pull && ./deploy.sh"
+        shell: bash
