--- a/.github/workflows/Cl.yaml
+++ b/.github/workflows/Cl.yaml
@@ -19,7 +19,7 @@ jobs:
         with:
           python-version: "3.11"
       - name: Install dependencies
-        run: |
+        run:  npm install
           python3 -m pip install --upgrade pip setuptools wheel
           pip install -r requirements.txt
       - name: Lint with flake8
