--- a/.github/workflows/Cl.yaml
+++ b/.github/workflows/Cl.yaml
@@ -7,39 +7,43 @@ on:
 
   pull_request:
     branches:
-    - main
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
       - name: Set up python 3.11
         uses: actions/setup-python@v2
         with:
           python-version: "3.11"
+
       - name: Install dependencies
-        run:  npm install
+        run: |
+          npm install
           python3 -m pip install --upgrade pip setuptools wheel
           pip install -r requirements.txt
+
       - name: Lint with flake8
         run: |
           pip install flake8
           flake8
+
       - name: Run tests with coverage
         env:
-          SECRET_KEY: ${{secrets.SECRET_KEY}}
-          DEBUG: ${{secrets.DEBUG}}
-
+          SECRET_KEY: ${{ secrets.SECRET_KEY }}
+          DEBUG: ${{ secrets.DEBUG }}
         run: |
           python manage.py test
 
       - name: Email jo'natish
         env:
-          SECRET_KEY: ${{secrets.SECRET_KEY}}
-          DEBUG: ${{secrets.DEBUG}}
-          run:
-            python manage.py ci_mail
+          SECRET_KEY: ${{ secrets.SECRET_KEY }}
+          DEBUG: ${{ secrets.DEBUG }}
+        run: |
+          python manage.py ci_mail
 
   deploy:
     runs-on: ubuntu-latest
@@ -74,3 +78,4 @@ jobs:
         run: |
           ssh root@143.198.183.137 "cd ../home/kutubxona_api1 && git pull && ./deploy.sh"
         shell: bash
+
