--- a/.github/workflows/Cl.yaml
+++ b/.github/workflows/Cl.yaml
@@ -1,46 +1,43 @@
-name: kutubxona_api1 Backend
+name: Sayohatlar Backend
 
 on:
   push:
-    branches:
+    banches:
       - main
 
   pull_request:
     branches:
-      - main
+    - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up python 3.11
-        uses: actions/setup-python@v4
+      - uses: actions/checkout@v2
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v2
         with:
           python-version: "3.11"
-
-      - name: Install Python dependencies
+      - name: Install dependencies
         run: |
           python3 -m pip install --upgrade pip setuptools wheel
           pip install -r requirements.txt
-
       - name: Lint with flake8
         run: |
           pip install flake8
           flake8
-
       - name: Run tests with coverage
         env:
-          SECRET_KEY: ${{ secrets.SECRET_KEY }}
-          DEBUG: ${{ secrets.DEBUG }}
+          SECRET_KEY: ${{secrets.SECRET_KEY}}
+          DEBUG: ${{secrets.DEBUG}}
+
         run: |
           python manage.py test
 
-      - name: Email jo'natish
+      - name: Email jo'natsh
         env:
-          SECRET_KEY: ${{ secrets.SECRET_KEY }}
-          DEBUG: ${{ secrets.DEBUG }}
+          SECRET_KEY: ${{secrets.SECRET_KEY}}
+          DEBUG: ${{secrets.DEBUG}}
         run: |
           python manage.py ci_mail
 
