--- a/.github/workflows/Cl.yaml
+++ b/.github/workflows/Cl.yaml
@@ -1,4 +1,4 @@
-name: Sayohatlar Backend
+name: kutubxona_api1 Backend
 
 on:
   push:
@@ -13,11 +13,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python 3.11.1
-        uses: actions/setup-python@v3
+      - uses: actions/checkout@v2
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v2
         with:
-          python-version: "3.11.1"
+          python-version: "3.11"
       - name: Install dependencies
         run: |
           python3 -m pip install --upgrade pip setuptools wheel
